Table names again configurable